--- a/part2/part2/app/src/main/res/values-night/themes.xml
+++ b/part2/part2/app/src/main/res/values-night/themes.xml
@@ -1,16 +1,30 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
     <style name="Theme.Part2" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
+        <!-- Primary (Charcoal for depth and contrast) -->
+        <item name="colorPrimary">@color/navy</item>
+        <item name="colorPrimaryVariant">@color/slate</item>
+        <item name="colorOnPrimary">@color/cool_gray</item>
+
+        <!-- Secondary (Sapphire for cool elegance) -->
+        <item name="colorSecondary">@color/emerald</item>
+        <item name="colorSecondaryVariant">@color/blue_gray</item>
+        <item name="colorOnSecondary">@color/ivory</item>
+
+        <!-- Status bar -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+
+        <!-- Surface colors (dark slate background, light text) -->
+        <item name="colorSurface">@color/navy</item>
+        <item name="colorOnSurface">@color/ivory</item>
+
+        <!-- Background (overall night background) -->
+        <item name="android:windowBackground">@drawable/background_n</item>
+
+        <!-- CardView default background (cool taupe) -->
+        <item name="cardViewStyle">@style/CardView.Dark</item>
+    </style>
+
+    <style name="CardView.Dark" parent="CardView">
+        <item name="cardBackgroundColor">@color/emerald</item> <!-- Cool, muted base -->
     </style>
 </resources>
