--- a/part2/part2/app/src/main/res/layout/activity_add_student.xml
+++ b/part2/part2/app/src/main/res/layout/activity_add_student.xml
@@ -1,27 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".ui.activity.AddStudentActivity">
 
-    <EditText
-        android:id="@+id/studentName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Student Name" />
-    <EditText
-        android:id="@+id/studentEmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Email" />
-    <EditText
-        android:id="@+id/studentUsername"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Student username" />
-    <Button
-        android:id="@+id/btnAddStudent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add Student" />
-
-</androidx.constraintlayout.widget.ConstraintLayout >
+</androidx.constraintlayout.widget.ConstraintLayout>
