--- a/part2/part2/app/src/main/res/layout/activity_add_student.xml
+++ b/part2/part2/app/src/main/res/layout/activity_add_student.xml
@@ -1,10 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.activity.AddStudentActivity">
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/form_card"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="24dp"
+        android:layout_marginBottom="16dp"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnAddStudent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="373dp"
+        android:orientation="vertical"
+        android:padding="24dp" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:labelFor="@id/studentName"
+                android:text="@string/studentName"
+                android:textColor="@color/warm_beige" />
+
+        <EditText
+            android:id="@+id/studentName"
+            android:layout_width="188dp"
+            android:layout_height="51dp"
+            android:minHeight="48dp"
+            android:hint="@string/hint4"
+            android:autofillHints="name"
+            android:background="@drawable/edittext_background"
+            android:inputType="textPersonName" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:labelFor="@id/studentEmail"
+                android:text="@string/studentEmail"
+                android:textColor="@color/warm_beige" />
+
+        <EditText
+            android:id="@+id/studentEmail"
+            android:layout_width="188dp"
+            android:layout_height="51dp"
+            android:minHeight="48dp"
+            android:hint="@string/hint5"
+            android:autofillHints="emailAddress"
+            android:background="@drawable/edittext_background"
+            android:inputType="textEmailAddress" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:labelFor="@id/studentUsername"
+                android:text="@string/studentUsername"
+                android:textColor="@color/warm_beige" />
+
+            <EditText
+                android:id="@+id/studentUsername"
+                android:layout_width="188dp"
+                android:layout_height="51dp"
+                android:autofillHints="username"
+                android:background="@drawable/edittext_background"
+                android:hint="@string/hint6"
+                android:inputType="text"
+                android:maxHeight="50dp"
+                android:minHeight="48dp" />
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <Button
+        android:id="@+id/btnAddStudent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:text="@string/add_student"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
