--- a/part2/part2/app/src/main/res/layout/activity_course_details.xml
+++ b/part2/part2/app/src/main/res/layout/activity_course_details.xml
@@ -7,4 +7,15 @@
     android:layout_height="match_parent"
     tools:context=".ui.activity.CourseDetailsActivity">
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/addStudentButton"
+        android:contentDescription="@string/add_student"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@android:drawable/ic_input_add" />
 </androidx.constraintlayout.widget.ConstraintLayout>
