--- a/part2/part2/app/src/main/res/layout/activity_main.xml
+++ b/part2/part2/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:padding="16dp"
+        android:clipToPadding="false"
+        android:paddingBottom="100dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/floatingActionButton2"
         app:layout_constraintStart_toStartOf="parent"
