--- a/part2/part2/app/src/main/res/layout/activity_main.xml
+++ b/part2/part2/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:clipToPadding="false"
         android:paddingBottom="100dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/floatingActionButton2"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:contentDescription="@string/course_list" />
