--- a/part2/part2/app/src/main/res/layout/activity_list_course.xml
+++ b/part2/part2/app/src/main/res/layout/activity_list_course.xml
@@ -4,8 +4,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    android:background="?attr/selectableItemBackground"
+    android:layout_margin="16dp"
     android:clickable="true"
     android:focusable="true"
     card_view:cardCornerRadius="12dp"
@@ -15,30 +14,80 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@null"
-        android:padding="16dp">
+        android:padding="24dp">
 
-        <TextView
-            android:id="@+id/tvCourseCode"
-            android:layout_width="wrap_content"
+        <!--Course Code-->
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text=""
-            android:textStyle="bold"
-            android:textSize="18sp" />
+            android:layout_marginBottom="12dp"
+            android:orientation="horizontal" >
 
-        <TextView
-            android:id="@+id/tvCourseName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:textSize="16sp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/coursec"
+                android:textColor="@color/warm_beige"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/tvLecturerName"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/tvCourseCode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text=""
+                android:textColor="@color/warm_beige"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <!--Course Name-->
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text=""
-            android:textStyle="italic"
-            android:textSize="14sp" />
+            android:layout_marginBottom="12dp"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/coursen"
+                android:textColor="@color/warm_beige"
+                android:textStyle="bold"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/tvCourseName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text=""
+                android:textSize="16sp"
+                android:textColor="@color/warm_beige"/>
+        </LinearLayout>
+
+        <!--Lecturer Name-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/lecturern"
+                android:textColor="@color/warm_beige"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tvLecturerName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text=""
+                android:textColor="@color/warm_beige"
+                android:textSize="16sp" />
+        </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
