--- a/part2/part2/app/src/main/res/layout/item_student.xml
+++ b/part2/part2/app/src/main/res/layout/item_student.xml
@@ -35,5 +35,12 @@
             android:layout_marginTop="4dp"
             android:textColor="@color/gray"
             android:textSize="14sp"/>
+
+        <Button
+            android:id="@+id/btnRemoveStudent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/removeBtn"
+            android:layout_marginTop="8dp" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
