--- a/part2/part2/app/src/main/res/layout/activity_edit_student.xml
+++ b/part2/part2/app/src/main/res/layout/activity_edit_student.xml
@@ -6,57 +6,95 @@
     android:layout_height="match_parent"
     android:padding="16dp">
 
-    <EditText
-        android:id="@+id/editStudentName"
+    <!-- CardView containing form -->
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewContainer"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:minHeight="48dp"
-        android:hint="@string/hint_name"
-        android:inputType="textPersonName"
-        android:autofillHints="name"
-        android:importantForAccessibility="yes"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_margin="8dp"
+        android:elevation="4dp"
+        app:cardCornerRadius="12dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <EditText
-        android:id="@+id/editStudentEmail"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:minHeight="48dp"
-        android:hint="@string/hint_email"
-        android:inputType="textEmailAddress"
-        android:autofillHints="emailAddress"
-        android:importantForAccessibility="yes"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/editStudentName"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="16dp">
 
-    <EditText
-        android:id="@+id/editStudentUsername"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:minHeight="48dp"
-        android:hint="@string/hint_username"
-        android:inputType="text"
-        android:autofillHints="username"
-        android:enabled="false"
-        android:importantForAccessibility="yes"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/editStudentEmail"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/new_name"
+                android:textSize="14sp"
+                android:textStyle="bold" />
 
+            <EditText
+                android:id="@+id/editStudentName"
+                android:layout_width="284dp"
+                android:layout_height="wrap_content"
+                android:autofillHints="name"
+                android:hint="@string/hint_name"
+                android:background="@drawable/edittext_background"
+                android:importantForAccessibility="yes"
+                android:inputType="textPersonName"
+                android:minHeight="48dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/new_email"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/editStudentEmail"
+                android:layout_width="284dp"
+                android:layout_height="wrap_content"
+                android:autofillHints="emailAddress"
+                android:hint="@string/hint_email"
+                android:background="@drawable/edittext_background"
+                android:importantForAccessibility="yes"
+                android:inputType="textEmailAddress"
+                android:minHeight="48dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/new_matric"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/editStudentUsername"
+                android:layout_width="284dp"
+                android:layout_height="wrap_content"
+                android:autofillHints="username"
+                android:enabled="false"
+                android:hint="@string/hint_username"
+                android:background="@drawable/edittext_background"
+                android:importantForAccessibility="yes"
+                android:inputType="text"
+                android:minHeight="48dp" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <!-- Save Button below the CardView -->
     <Button
         android:id="@+id/btnSaveChanges"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="104dp"
         android:minHeight="48dp"
         android:text="@string/save_button"
-        android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@id/editStudentUsername"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/cardViewContainer" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
