--- a/part2/part2/app/src/main/res/layout/activity_student_details.xml
+++ b/part2/part2/app/src/main/res/layout/activity_student_details.xml
@@ -1,29 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:padding="16dp">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="16dp"
 
-    <TextView android:id="@+id/studentName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Name" android:textSize="18sp"/>
+    tools:context=".ui.activity.StudentDetailsActivity">
 
-    <TextView android:id="@+id/studentEmail"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/studentName"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Email" android:textSize="18sp"/>
+        android:textColor="@color/white"
+        android:shadowColor="@color/mocha"
+        android:shadowDx="10"
+        android:shadowDy="10"
+        android:shadowRadius="22"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
-    <TextView android:id="@+id/studentUsername"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/studentEmail"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Username" android:textSize="18sp"/>
+        android:textColor="@color/white"
+        android:shadowColor="@color/mocha"
+        android:shadowDx="10"
+        android:shadowDy="10"
+        android:shadowRadius="22"
+        android:layout_marginTop="8dp"/>
 
-    <TextView android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/studentMatric"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Enrolled Courses:" android:paddingTop="12dp" />
+        android:layout_marginTop="8dp"
+        android:textColor="@color/white"
+        android:shadowColor="@color/mocha"
+        android:shadowDx="10"
+        android:shadowDy="10"
+        android:shadowRadius="22" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Enrolled Courses"
+        android:textSize="18sp"
+        android:textStyle="bold"/>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/studentCoursesRecyclerView"
+        android:id="@+id/coursesRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"/>
+
 </LinearLayout>
