--- a/part2/part2/app/src/main/res/layout/item_course_in_student.xml
+++ b/part2/part2/app/src/main/res/layout/item_course_in_student.xml
@@ -3,22 +3,22 @@
     android:orientation="vertical" android:padding="10dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/darker_gray"
+    android:background="@color/maroon"
     android:layout_marginBottom="8dp">
 
     <TextView android:id="@+id/courseNameText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Course Name"
+        android:text="@string/coursen"
         android:textStyle="bold"/>
 
     <TextView android:id="@+id/courseCodeText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Course Code" />
+        android:text="@string/coursec" />
 
     <TextView android:id="@+id/lecturerText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Lecturer" />
+        android:text="@string/lecturern" />
 </LinearLayout>
