--- a/part2/part2/app/src/main/res/layout/activity_student_details.xml
+++ b/part2/part2/app/src/main/res/layout/activity_student_details.xml
@@ -1,59 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp"
-
+    android:layout_margin="8dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.activity.StudentDetailsActivity">
 
-    <TextView
-        android:id="@+id/studentName"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/studentInfoLayout"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:shadowColor="@color/mocha"
-        android:shadowDx="10"
-        android:shadowDy="10"
-        android:shadowRadius="22"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+        android:background="#9E906E"
+        android:orientation="vertical"
+        android:padding="8dp"
+        android:layout_marginTop="130dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" >
 
-    <TextView
-        android:id="@+id/studentEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:shadowColor="@color/mocha"
-        android:shadowDx="10"
-        android:shadowDy="10"
-        android:shadowRadius="22"
-        android:layout_marginTop="8dp"/>
+        <!--Student information-->
+        <TextView
+            android:id="@+id/studentName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#9E906E"
+            android:textColor="@color/mocha"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/studentMatric"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:textColor="@color/white"
-        android:shadowColor="@color/mocha"
-        android:shadowDx="10"
-        android:shadowDy="10"
-        android:shadowRadius="22" />
+        <TextView
+            android:id="@+id/studentEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:background="#9E906E"
+            android:textSize="18sp"
+            android:textColor="@color/mocha" />
 
+        <TextView
+            android:id="@+id/studentMatric"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:background="#9E906E"
+            android:textSize="18sp"
+            android:textColor="@color/mocha" />
+    </LinearLayout>
+
+    <!--Enrolled courses section-->
     <TextView
+        android:id="@+id/coursesLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Enrolled Courses"
-        android:textSize="18sp"
-        android:textStyle="bold"/>
+        android:text="@string/enroll"
+        android:textSize="20sp"
+        android:textColor="@color/warm_beige"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@+id/studentInfoLayout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/coursesRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"/>
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:contentDescription="@string/student_courses_desc"
+        app:layout_constraintTop_toBottomOf="@+id/coursesLabel"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
