Made some changes

--- a/part2/part2/app/src/main/res/layout/activity_edit_student.xml
+++ b/part2/part2/app/src/main/res/layout/activity_edit_student.xml
@@ -71,12 +71,12 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/editStudentUsername"
+                android:id="@+id/editStudentMatric"
                 android:layout_width="284dp"
                 android:layout_height="wrap_content"
-                android:autofillHints="username"
+                android:autofillHints="matric"
                 android:enabled="false"
-                android:hint="@string/hint_username"
+                android:hint="@string/hint_matric"
                 android:background="@drawable/edittext_background"
                 android:importantForAccessibility="yes"
                 android:inputType="text"
