--- a/part2/part2/app/src/main/res/layout/activity_edit_student.xml
+++ b/part2/part2/app/src/main/res/layout/activity_edit_student.xml
@@ -75,7 +75,7 @@
                 android:layout_width="284dp"
                 android:layout_height="wrap_content"
                 android:autofillHints="matric"
-                android:enabled="false"
+                android:enabled="true"
                 android:hint="@string/hint_matric"
                 android:background="@drawable/edittext_background"
                 android:importantForAccessibility="yes"
